Added Delete funcionality to application

--- a/src/main/resources/templates/employeeList.html
+++ b/src/main/resources/templates/employeeList.html
@@ -36,8 +36,9 @@
                        class="btn btn-primary btn-sm m-3">
                         Update
                     </a>
-                    <a th:href="@{/employees/deleteEmployee(employeeId=${tempEmployee.id})}"
-                       class="btn btn-warning btn-sm m-3">
+                    <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+                       class="btn btn-danger btn-sm m-3"
+                    onclick="if(!(confirm('Are you sure you want to delete this employee?'))) return false">
                         Delete
                     </a>
                 </td>
